[package]
name = "ghost-mpc"
version = "0.1.0"
edition = "2021"
description = "Rolling MPC ceremony for ZK parameter generation in Ghost"
license = "MIT"

[features]
default = []
# Enable for testing without full MPC operations
test-utils = []

[dependencies]
# ZK proving system (Groth16 via bellperson)
# Uses phase2 module for MPC ceremony operations
bellperson = "0.26"

# Finite field and curve arithmetic
ff = "0.13"
group = "0.13"

# Pairing-friendly curves for Groth16
blstrs = "0.7"
pairing = "0.23"

# Internal crates
ghost-common = { path = "../ghost-common" }
ghost-storage = { path = "../ghost-storage" }

# Cryptography
sha2 = "0.10"
blake2 = "0.10"
rand = "0.8"
getrandom = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Logging
tracing = "0.1"

# Async
tokio = { version = "1.36", features = ["fs", "io-util", "sync"] }
async-trait = "0.1"

# Concurrency
parking_lot = "0.12"

# Hex encoding
hex = "0.4"

# Zeroize for secure memory handling
zeroize = { version = "1.7", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.36", features = ["rt-multi-thread", "macros"] }
tempfile = "3.10"
