[package]
name = "ghost-zkp"
version = "0.1.0"
edition = "2021"
description = "Zero-knowledge proof infrastructure for Ghost Pay ZK-BFT consensus"
license = "MIT"

[dependencies]
# ZK proving system (Groth16 via bellperson)
# Note: bellperson 0.26 requires bellpepper-core 0.2, not 0.4
bellperson = "0.26"

# Finite field and curve arithmetic
ff = "0.13"
group = "0.13"

# Pairing-friendly curves for Groth16
blstrs = "0.7"
pairing = "0.23"

# Hashing
sha2 = "0.10"
blake2 = "0.10"

# Note: For full Poseidon hash support, add neptune crate when bellperson
# version compatibility is resolved. Currently using MiMC-style hash.
# neptune = { version = "13.0", features = ["bls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Random number generation
rand = "0.8"
getrandom = "0.2"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

# Parallelism for proof generation
rayon = "1.8"

# Hex encoding for display
hex = "0.4"

[dev-dependencies]
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
