[package]
name = "ghost-zkp"
version = "0.1.0"
edition = "2021"
description = "Zero-knowledge proof infrastructure for Ghost Pay ZK-BFT consensus"
license = "MIT"

[features]
default = []
# M-2: Feature to allow simulated proofs in non-test builds (for integration testing)
test-utils = []
# H-1: ZK Production Mode
#
# When this feature is enabled, the crate will:
# 1. Require trusted setup ceremony artifacts to be present
# 2. Verify artifacts match expected hashes before using them
# 3. Refuse to generate proofs if artifacts are missing or invalid
#
# **WARNING**: ZK proofs generated without this feature should NOT be
# considered secure for mainnet. The default Groth16 parameters are
# test-only and could be exploited by a malicious prover.
#
# To enable production mode:
# 1. Complete an MPC ceremony to generate trusted setup artifacts
# 2. Set ZK_PARAMS_PATH environment variable to artifact location
# 3. Compile with `--features zk-production`
#
# See docs/ZK_CEREMONY.md for MPC ceremony coordination instructions.
zk-production = []

[dependencies]
# ZK proving system (Groth16 via bellperson)
# Note: bellperson 0.26 requires bellpepper-core 0.2, not 0.4
bellperson = "0.26"

# Finite field and curve arithmetic
ff = "0.13"
group = "0.13"

# Pairing-friendly curves for Groth16
blstrs = "0.7"
pairing = "0.23"

# Hashing
sha2 = "0.10"
blake2 = "0.10"

# Note: For full Poseidon hash support, add neptune crate when bellperson
# version compatibility is resolved. Currently using MiMC-style hash.
# neptune = { version = "13.0", features = ["bls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Random number generation
rand = "0.8"
getrandom = "0.2"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

# Parallelism for proof generation
rayon = "1.8"

# Hex encoding for display
hex = "0.4"

# Shared constants (L2_TRANSFER_FEE_SATS)
ghost-common = { path = "../ghost-common" }

[dev-dependencies]
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
