[package]
name = "ghost-tap-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "ghost_tap_core"

[features]
default = []
uniffi-cli = ["uniffi/cli"]

[dependencies]
# Internal crates
ghost-common.workspace = true
ghost-glyph.workspace = true
ghost-zkp.workspace = true
ghost-keys.workspace = true

# ZK proving
bellperson.workspace = true
blstrs.workspace = true

# Crypto
bip39.workspace = true
bip32.workspace = true
secp256k1.workspace = true
k256.workspace = true
sha2.workspace = true
ripemd.workspace = true
aes-gcm.workspace = true
rand.workspace = true
getrandom.workspace = true

# Networking
reqwest.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true

# Time
chrono.workspace = true

# Concurrency
parking_lot.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Storage
rusqlite.workspace = true

# FFI
uniffi.workspace = true

# Security
zeroize.workspace = true
secrecy.workspace = true
subtle.workspace = true
argon2.workspace = true
bs58.workspace = true
hex.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
tokio-test.workspace = true
