[package]
name = "wraith-wallet-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
wraith-protocol = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
async-trait = { workspace = true }
bip32 = { workspace = true }
bip39 = { workspace = true }
bitcoin = { workspace = true }
futures-util = { workspace = true }
ghost-gsp-proto = { workspace = true }
ghost-keys = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
secp256k1 = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-socks = "0.5"
url = "2"
tracing = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
axum = { workspace = true }
# In-process Wraith coordinator for the participant-client integration
# test. The coordinator is a binary, but it exposes a `lib` target so
# tests can call `build_router(state)` and bind it to an ephemeral
# port without spawning a subprocess.
wraith-coordinator = { path = "../../../bins/wraith-coordinator" }
