[package]
name = "wraith-wallet-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
wraith-protocol = { workspace = true }
ghost-locks = { workspace = true }
aes-gcm = { workspace = true }
# Local override to pull in reqwest's SOCKS5 feature for the
# Tor-routed /outputs client. Workspace-default reqwest doesn't
# include `socks` — adding it here is scoped to wraith-wallet-core.
# Keep the same workspace features (json, rustls-tls) plus socks.
argon2 = { workspace = true }
async-trait = { workspace = true }
bip32 = { workspace = true }
bip39 = { workspace = true }
bitcoin = { workspace = true }
futures-util = { workspace = true }
ghost-gsp-proto = { workspace = true }
ghost-keys = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls", "socks"] }
# Sync HTTP client for bitcoind RPC. Pure-sync (no tokio runtime) so
# the recovery path can be invoked from anywhere without runtime
# fights — same reasoning as wraith-coordinator's broadcaster.
ureq = { version = "2.10", features = ["json", "tls"] }
base64 = { workspace = true }
secp256k1 = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-socks = "0.5"
url = "2"
tracing = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
axum = { workspace = true }
# In-process Wraith coordinator for the participant-client integration
# test. The coordinator is a binary, but it exposes a `lib` target so
# tests can call `build_router(state)` and bind it to an ephemeral
# port without spawning a subprocess.
wraith-coordinator = { path = "../../../bins/wraith-coordinator" }
