[package]
name = "wraith-wallet-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "wraithd"
path = "src/main.rs"

[dependencies]
wraith-wallet-core = { workspace = true }
wraith-wallet-ipc = { workspace = true }
ghost-gsp-proto = { workspace = true }
ghost-keys = { workspace = true }
bitcoin = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
secrecy = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
wraith-wallet-ipc = { workspace = true }
wraith-wallet-core = { workspace = true }
ghost-keys = { workspace = true }
ghost-gsp-proto = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
axum = { workspace = true }
bitcoin = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
